<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity"
        tools:ignore="ScrollViewSize">

        <TextView
            android:id="@+id/matriculationHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/matriculation"
            android:textColor="@color/app_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/matriculationObtainedLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/matriculationHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/matriculationObtained"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/enter_obtained_marks"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/matriculationTotalLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/matriculationObtainedLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/matriculationTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/enter_total_marks"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/intermediateHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/matriculationTotalLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/intermediate"
            android:textColor="@color/app_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/interObtainedLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/intermediateHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/interObtained"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/enter_obtained_marks"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/interTotalLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/interObtainedLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/interTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/enter_total_marks"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/interTotalLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/calculateBtn"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/app_color"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:icon="@drawable/calculate"
                app:iconTint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearBtn"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/app_color"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:icon="@drawable/clear"
                app:iconTint="@color/white" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>